<resources>
    <string name="app_name">Driver RideshareRates</string>
    <string name="google_android_map_api_key">AIzaSyCyjW6PLNDtNmhUsfiWygerQEI2Oc9el6w</string>
    <string name="mapboxkey">pk.eyJ1IjoiaWNhbnN0dWRpb3oiLCJhIjoiY2oyMXQ3dGRpMDAwdDJ3bXpmZHRkdTBtNyJ9.PxslIcrVRj_gVgiv-Y-jog</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="fname" translatable="false">First Name</string>
    <string name="lname" translatable="false">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="drop_up_location">Drop Location</string>
    <string name="pick_up_location">Pickup Location</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="coh_driver">Cash on your hand.</string>
    <string name="change_password">Change Password</string>
    <string name="unpaid">UNPAID</string>
    <string name="Login">Login</string>
    <string name="contact_admin">There is some problem. please contact your administrator.</string>
    <string name="network_not_available">Network is not available</string>
    <string name="try_again">Please try again!</string>
    <string name="error_occurred">Error occurred</string>
    <string name="network">network is not available</string>
    <string name="add_vehicleinfo">Add Vehicle Information</string>
    <string name="upload_doc">Upload Document</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="payment_history">My Earnings</string>
    <string name="profile">Profile</string>
    <string name="success">Welcome to </string>
    <string name="fiels_is_required">Enter Name</string>
    <string name="fname_is_required">Enter First Name</string>
    <string name="lname_is_required">Enter Last Name</string>
    <string name="fiels_is_required1">Enter Valid Password</string>
    <string name="email_invalid">Enter valid email</string>
    <string name="mobile_invalid">Enter valid Mobile Number</string>
    <string name="ssn_invalid">Enter valid SSN Number</string>
    <string name="password_length">Minimum password length is 6 characters</string>
    <string name="password_nomatch">Password didn\'t match</string>
    <string name="ride_reuest_completed">Ride request completed</string>
    <string name="ride_reuest_cancelled">Ride request cancelled</string>
    <string name="accepted_request">Accepted Rides</string>
    <string name="ccancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ride_completion">RIDE COMPLETION</string>
    <string name="ride_cancellation">RIDE CANCELLATION</string>
    <string name="track_ride">Track Ride</string>
    <string name="passanger_info">Passenger Information</string>
    <string name="taxi">TAXI</string>
    <string name="pending_request">Pending Rides</string>
    <string name="cancelled_request">Cancelled Rides</string>
    <string name="completed_request">Completed Rides</string>
    <string name="couldnt_get_location">Couldn\'t get your location</string>
    <string name="direct_requesting">Direction Requesting...</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="tryagian">Try again</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="pwd_reset_instruction">Enter below details and valid OTP to reset your password</string>
    <string name="register_hint">Registered Email</string>
    <string name="cancel">CANCEL</string>
    <string name="send_otp">Send OTP</string>
    <string name="nodata_found">No Data Found</string>
    <string name="confirm_new_pwd">Confirm new password</string>
    <string name="new_pwd">New password</string>
    <string name="old_pwd">Old password</string>
    <string name="profile_uploaded">profile uploaded</string>
    <string name="change">CHANGE</string>
    <string name="newpwd_required">new password is required</string>
    <string name="password_updated">password Updated</string>
    <string name="ride_acceptance">RIDE ACCEPTANCE</string>
    <string name="ride_reuest_accepted">ride request accepted</string>
    <string name="accept_ride">ACCEPT RIDE</string>
    <string name="complete_ride">COMPLETE RIDE</string>
    <string name="cancel_ride">CANCEL RIDE</string>
    <string name="no_status">NO STATUS</string>
    <string name="basefare">"Base Fare       "</string>
    <string name="approve_payment_offline">APPROVE OFFLINE PAYMENT</string>
    <string name="vehicle">vehicle</string>
    <string name="doc">doc</string>
    <string name="go">go</string>
    <string name="invalid_location">Invalid location</string>
    <string name="ride_completion_msg">Do you want to complete your accepted ride?</string>
    <string name="ride_cancellation_msg">Do you want to cancel your accepted ride?</string>
    <string name="ride_acceptance_msg">Do you want to accpect ride?</string>
    <string name="re_login">Re-login and try again</string>
    <string name="password_required">Password is required</string>
    <string name="old_password_required">Old password is required</string>
    <string name="format_msg">jpg,png or gif is only accepted</string>
    <string name="doo">do</string>
    <string name="payment_receive_from_customer">Payment Received From Customer</string>
    <string name="customer_number">Customer Number</string>
    <string name="Pick_Customer">Pick Customer</string>
    <string name="Start_Ride">Start Ride</string>
    <string name="Ride_Started">Ride Started</string>
    <string name="log_out">Log out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="total_rides">Total Rides</string>
    <string name="earnings">Earnings</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="overall">Overall</string>
    <string name="payment_status">Payment Status</string>
    <string name="brand">BRAND</string>
    <string name="vehicle_no">VEHICLE NO</string>
    <string name="model">MODEL</string>
    <string name="year">YEAR</string>
    <string name="color">COLOR</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="date">DATE</string>
    <string name="customer_name">CUSTOMER NAME</string>
    <string name="new_password">New password</string>
    <string name="password_reset">Password Reset</string>
    <string name="registered_email">Enter your registered email address ,We will send you an email to reset your password</string>
    <string name="registered_email_input">Registered Email</string>
    <string name="reset_password">Reset password</string>
    <string name="ride_payment_detail">RIDE PAYMENT DETAIL</string>
    <string name="amount">Amount</string>
    <string name="distance">Distance</string>
    <string name="status">Status</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="driver_name">Driver Name</string>
    <string name="paypal_id">PAYPAL ID</string>
    <string name="dl">Please upload your drivinng licence</string>
    <string name="vi">Please upload your vehicle insurance</string>
    <string name="vp">Please upload your vehicle permit</string>
    <string name="vr">Please upload your vehicle registration</string>
    <string name="passanger_vehicle">Passanger Vehicle</string>
    <string name="api_key" translatable="false">AIzaSyCxHBt8AxX-ujxNg3L008HPJ1o1KJZhDTM</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="accept_ride1">Accept Ride</string>
    <string name="reject_ride1">Reject Ride</string>
    <string name="insurance_document">Insurance Document</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">driver@gmail.com</string>
    <string name="firebase_password" translatable="false">12345678</string>
    <string name="title_activity_map_tracking">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="model_name">Model name</string>
    <string name="brand_name">Brand name</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="vehicle_year">Vehicle year</string>
    <string name="vehicle_num">Car No Plate</string>
    <string name="label_ok">Vehicle Number</string>
    <string name="submit">Submit</string>
    <string name="service_note">Note: You can select multiple services which vehicle type added into your profile</string>
    <string name="ride_has_been_completed_successfully">Ride has been completed successfully</string>
    <string name="default_notification_channel_id">RideShareDriver</string>
    <string name="ssn_number">SSN Number</string>
    <string name="add_vehicle"><u>Add Vehicle</u></string>
    <string name="home_address">Home Address</string>
    <string name="wifi">WiFi</string>
    <string name="luxury_seats">Luxury Seats</string>
    <string name="t_v">T.V.</string>
    <string name="driver_in_rest">You have completed your 12 hours. You can be online after 5 hours of rest.</string>
    <string name="upload_required_docs">Upload required docs to go online</string>
    <string name="action_required">Action Required!</string>
    <string name="vehicle_expired">Your current vehicle has been expired. Please add new vehicle.</string>
    <string name="year1">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="loading">Loading...</string>
    <string name="upload_identity_document">Upload Identity Document</string>
    <string name="required_steps">Required steps</string>
    <string name="set_up_your_account">Here\'s what you need to do to set up your account</string>
    <string name="driving_licence">Driver\'s Licence</string>
    <string name="need_your_attention">Need your Attention</string>
    <string name="car_registration">Car Registration</string>
    <string name="car_insurance">TNC/INSURANCE</string>
    <string name="identity_document">Identity Document</string>
    <string name="update_identity_document">Update Identity Document</string>
    <string name="uploaded_successfully">Uploaded Successfully</string>
    <string name="technical_issue">Are you facing any technical issue?</string>
    <string name="techincal_issue">Technical Issue</string>
    <string name="write_short_description">Write short description</string>
    <string name="approval">Your Approval is still pending. We will update you within 48 hours.</string>
    <string name="rideshare_call_center">(404)207-5620</string>
    <string name="complete_ride_confirmation">Do you want to complete this ride before reaching destination?</string>
    <string name="document_approval_status">Document</string>
    <string name="document_status">Document Status</string>
    <string name="document_approval">Document</string>
    <string name="approval_pending">Pending</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="document_approved">Approved</string>
    <string name="background_document">Background Check</string>
    <string name="upload_vehicle_inspection">Upload Vehicle Inspection</string>
    <string name="expired">Expired</string>
    <string name="cancel_ride_confirm">Do you want to cancel this ride?</string>
</resources>