<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey4"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10"
        android:paddingTop="@dimen/margin_10"
        android:text="@string/send_otp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="gone"
        android:background="@color/black" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_10"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/pwd_reset_instruction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        >


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border"
            android:hint="@string/register_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:paddingRight="@dimen/margin_10"
            android:textColorHint="@color/background_white"
            android:textCursorDrawable="@drawable/cursor" />


        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ronded_button1"
                android:text="@string/send_otp"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ronded_button1"
                android:text="@string/cancel"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>