<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey4"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10"
        android:paddingLeft="@dimen/margin_10"
        android:text="@string/password_reset"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="gone"
        android:background="@color/black" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/margin_15"
        android:paddingRight="@dimen/margin_10"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:text="Enter below details and valid OTP to reset your password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        >



        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty_five"
            android:background="@drawable/border"
            android:hint="@string/register_hint"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textColorHint="@color/background_white"
            android:textCursorDrawable="@drawable/cursor" />



        <EditText
            android:id="@+id/input_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty_five"
            android:background="@drawable/border"
            android:hint="@string/enter_otp"
            android:inputType="text"
            android:textSize="14sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textColorHint="@color/background_white"
            android:textCursorDrawable="@drawable/cursor" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/white"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/input_Password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty_five"
            android:background="@drawable/border"
            android:hint="New password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textColorHint="@color/background_white"
            android:textCursorDrawable="@drawable/cursor"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/app_clr" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="15dp"
            app:passwordToggleTint="@color/white"
            app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty_five"
            android:background="@drawable/border"
            android:hint="Confirm new password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:paddingRight="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textColorHint="@color/background_white"
            android:textCursorDrawable="@drawable/cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                android:background="@drawable/ronded_button1"
                android:text="@string/reset_password"
                android:paddingHorizontal="5dp"
                android:layout_weight="1"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/ronded_button1"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:textStyle="bold|italic"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>